Upgrade Spring